--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -1,11 +1,3 @@
-:root {
-  --off-white: hsl(0, 0%, 94%);
-  --light-gray: hsl(0, 0%, 86%);
-  --smoky-gray: hsl(0, 1%, 44%);
-  --off-black: hsl(0, 0%, 8%);
-  --purple: hsl(259, 100%, 65%);
-  --light-red: hsl(0, 100%, 67%);
-}
 html {
   height: 100%;
   line-height: 1.6;
@@ -20,52 +12,148 @@ body {
 * {
   box-sizing: border-box;
 }
-*::before,
+*::before {
+  box-sizing: border-box;
+}
 *::after {
   box-sizing: border-box;
 }
 
 main {
-  background-color: white;
+  width: 50%;
+  background-color: hsl(0, 0%, 100%);
   border-radius: 10px;
   border-bottom-right-radius: 200px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+@media (min-width: 1200px) {
+  main {
+    width: 1000px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  main {
+    width: 792px;
+  }
+}
+@media (max-width: 991px) and (min-width: 400px) {
+  main {
+    width: 96%;
+    transform: translateX(2%);
+  }
 }
 
 input {
   outline: 0;
 }
-
 input:focus {
   outline: 0;
 }
-
-.line-num::before {
-  content: "";
-  position: absolute;
-  left: -40%;
-  bottom: 0;
-  background-color: var(--purple);
-  width: 15%;
-  height: 15px;
+input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
-.line-num::after {
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.year-sec,
+.month-sec,
+.day-sec {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.year-sec::before,
+.month-sec::before,
+.day-sec::before {
   content: "";
   position: absolute;
-  left: -24%;
-  bottom: 0;
-  background-color: var(--purple);
+  background-color: hsl(259, 100%, 65%);
   width: 15%;
   height: 15px;
+  bottom: 0;
+  left: -40%;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .year-sec::before,
+  .month-sec::before,
+  .day-sec::before {
+    left: -30%;
+    width: 23%;
+  }
+}
+.year-sec::after,
+.month-sec::after,
+.day-sec::after {
+  content: "";
+  position: absolute;
+  background-color: hsl(259, 100%, 65%);
+  width: 15%;
+  height: 15px;
+  bottom: 0;
+  left: -24%;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .year-sec::after,
+  .month-sec::after,
+  .day-sec::after {
+    left: -56%;
+    width: 23%;
+  }
 }
 
 .line::before {
   content: "";
   position: absolute;
+  background-color: hsl(0, 0%, 86%);
+  width: 848px;
+  height: 2px;
   right: 100%;
   top: 50%;
   transform: translateY(-50%);
-  background-color: var(--light-gray);
-  width: 848px;
-  height: 2px;
 }
+
+.line-num {
+  letter-spacing: 38px;
+  left: 50px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .line-num {
+    letter-spacing: 56px;
+  }
+}
+
+.line-num.year {
+  top: -1rem;
+}
+.line-num.month {
+  top: 7.5rem;
+}
+.line-num.day {
+  top: 16rem;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .inputs #day-input {
+    width: 100%;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .inputs #month-input {
+    width: 100%;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .inputs #year-input {
+    width: 100%;
+  }
+}
+
+/*# sourceMappingURL=styles.css.map */
