--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -88,6 +88,8 @@ input::-webkit-inner-spin-button {
 .line-num {
   letter-spacing: 48px;
   border: 10px solid hsl(259, 100%, 65%);
+  min-width: 273px;
+  min-height: 116px;
   text-align: center;
   left: 40px;
   padding-left: 45px;
