--- a/app/src/main.scss
+++ b/app/src/main.scss
@@ -91,6 +91,8 @@ input {
 .line-num {
   letter-spacing: 48px;
   border: 10px solid $purple;
+  min-width: 273px;
+  min-height: 116px;
   text-align: center;
   left: 40px;
   padding-left: 45px;
